--- a/pages/markSearch/markSearch.wxss
+++ b/pages/markSearch/markSearch.wxss
@@ -1,6 +1,6 @@
 
 page{
-  background-color: #FAFAFA
+  background-color: #FFFFFF
 }
 
 .list-page{
@@ -107,7 +107,19 @@ page{
 .btn1{
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  align-content: center;
+  margin:10px;
 }
+.weui-input{
+  margin: 10px;
+  border: 1px solid #d0d0d0;
+}
+.searchblock{
+  /* display: flex;
+  flex-direction: column; */
+}
+/* .search{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+} */
