--- a/pages/SettingPage/settingpage.wxss
+++ b/pages/SettingPage/settingpage.wxss
@@ -73,6 +73,11 @@ page{
   display: flex;
   flex-direction: row;
 }
+.switch2texticon{
+  display: flex;
+  flex-direction: row;
+  font-size: 15spx;
+}
 
 .settext{
   display: flex;
@@ -83,7 +88,11 @@ page{
   border-color:#C4C4C4; */
   color:#F05E1C ;
 }
+.switch2text{
+  margin-left: 8px;
+}
 
 .blank{
   /* display: flex; */
 }
+
