--- a/pages/SettingPage/settingpage.wxss
+++ b/pages/SettingPage/settingpage.wxss
@@ -86,7 +86,7 @@ page{
   padding: 5px;
   /* border-bottom:solid 1px;
   border-color:#C4C4C4; */
-  color:#F05E1C ;
+  /* color:#F05E1C ; */
 }
 .switch2text{
   margin-left: 8px;
