--- a/pages/SettingPage/settingpage.wxml
+++ b/pages/SettingPage/settingpage.wxml
@@ -82,6 +82,15 @@
 <!-- <view class="switch1">
   <text class="switch1text" bindtap="showOpenid">显示当前openid</text>
 </view> -->
+<view class="settext">
+  <view class="switch1texticon" bindtap="dbtest">
+    <image style="width: 22px; height: 22px;"src="../assets/settingicon/Keyboard.png"></image>
+    <text decode="{{true}}" space="{{true}}">&nbsp;&nbsp;</text>
+    <text>dbtest</text>
+  </view>
+  
+</view>
+
 </view>
 <view class="blank"> </view>
 
