--- a/pages/flowitem/flowitem.wxml
+++ b/pages/flowitem/flowitem.wxml
@@ -1,17 +1,17 @@
 <!--pages/flowitem/flowitem.wxml-->
-<view class="main">
+<view class="main" wx:for="{{flows}}">
   <view class="text">
     <view class="t0">Flow: </view>
-    <text class="t1"> {{flows.flow}}</text>
+    <text class="t1"> {{item.flow}}</text>
   </view>
   <view class="blank1"> </view>
   <view class="text">
     <view class="t0"> mark: </view>
-    <text class="t1">{{flows.mark}}</text>
+    <text class="t1">{{item.mark}}</text>
   </view>
   <view class="blank1"> </view>
   <view class="text">
     <view class="t0">time: </view>
-    <text class="t1">{{flows.time}}</text>
+    <text class="t1">{{item.time}}</text>
   </view>
 </view>
